add attribute info on talents

--- a/WorldOfLies/world-of-lies.html
+++ b/WorldOfLies/world-of-lies.html
@@ -142,23 +142,23 @@
         <div class="sheet-col even"> <!-- COL 2 -->
             <div class="sheet-box">
 	    <label class="sheet-class-moves sheet-section-title"><span data-i18n="talents">Talents</span>:</label>
-	    <input type="checkbox" name="armes-à-feu" value="1" /><label><span data-i18n="armes-à-feu">Armes à feu</span></label><br/>
-	    <input type="checkbox" name="corps-à-corps" value="1" /><label><span data-i18n="corps-à-corps">Corps à corps</span></label><br/>
-	    <input type="checkbox" name="conduite" value="1" /><label><span data-i18n="conduite">Conduite</span></label><br/>
-	    <input type="checkbox" name="démolition" value="1" /><label><span data-i18n="démolition">Démolition</span></label><br/>
-	    <input type="checkbox" name="espionnage" value="1" /><label><span data-i18n="espionnage">Espionnage</span></label><br/>
-	    <input type="checkbox" name="filatures" value="1" /><label><span data-i18n="filatures">Filatures</span></label><br/>
-	    <input type="checkbox" name="informatique" value="1" /><label><span data-i18n="informatique">Informatique</span></label><br/>
-	    <input type="checkbox" name="interrogatoire" value="1" /><label><span data-i18n="interrogatoire">Interrogatoire</span></label><br/>
-	    <input type="checkbox" name="investigation" value="1" /><label><span data-i18n="investigation">Investigation</span></label><br/>
-	    <input type="checkbox" name="persuasion" value="1" /><label><span data-i18n="persuasion">Persuasion</span></label><br/>
-	    <input type="checkbox" name="médecine" value="1" /><label><span data-i18n="médecine">Médecine</span></label><br/>
-	    <input type="checkbox" name="navigation" value="1" /><label><span data-i18n="navigation">Navigation</span></label><br/>
-	    <input type="checkbox" name="occultisme" value="1" /><label><span data-i18n="occultisme">Occultisme</span></label><br/>
-	    <input type="checkbox" name="pistage" value="1" /><label><span data-i18n="pistage">Pistage</span></label><br/>
-	    <input type="checkbox" name="pilotage" value="1" /><label><span data-i18n="pilotage">Pilotage</span></label><br/>
-	    <input type="checkbox" name="psychologie" value="1" /><label><span data-i18n="psychologie">Psychologie</span></label><br/>
-	    <input type="checkbox" name="sciences" value="1" /><label><span data-i18n="sciences">Sciences</span></label><br/>
+	    <input type="checkbox" name="attr_armes-à-feu" value="1" /><label><span data-i18n="armes-à-feu">Armes à feu</span></label><br/>
+	    <input type="checkbox" name="attr_corps-à-corps" value="1" /><label><span data-i18n="corps-à-corps">Corps à corps</span></label><br/>
+	    <input type="checkbox" name="attr_conduite" value="1" /><label><span data-i18n="conduite">Conduite</span></label><br/>
+	    <input type="checkbox" name="attr_démolition" value="1" /><label><span data-i18n="démolition">Démolition</span></label><br/>
+	    <input type="checkbox" name="attr_espionnage" value="1" /><label><span data-i18n="espionnage">Espionnage</span></label><br/>
+	    <input type="checkbox" name="attr_filatures" value="1" /><label><span data-i18n="filatures">Filatures</span></label><br/>
+	    <input type="checkbox" name="attr_informatique" value="1" /><label><span data-i18n="informatique">Informatique</span></label><br/>
+	    <input type="checkbox" name="attr_interrogatoire" value="1" /><label><span data-i18n="interrogatoire">Interrogatoire</span></label><br/>
+	    <input type="checkbox" name="attr_investigation" value="1" /><label><span data-i18n="investigation">Investigation</span></label><br/>
+	    <input type="checkbox" name="attr_persuasion" value="1" /><label><span data-i18n="persuasion">Persuasion</span></label><br/>
+	    <input type="checkbox" name="attr_médecine" value="1" /><label><span data-i18n="médecine">Médecine</span></label><br/>
+	    <input type="checkbox" name="attr_navigation" value="1" /><label><span data-i18n="navigation">Navigation</span></label><br/>
+	    <input type="checkbox" name="attr_occultisme" value="1" /><label><span data-i18n="occultisme">Occultisme</span></label><br/>
+	    <input type="checkbox" name="attr_pistage" value="1" /><label><span data-i18n="pistage">Pistage</span></label><br/>
+	    <input type="checkbox" name="attr_pilotage" value="1" /><label><span data-i18n="pilotage">Pilotage</span></label><br/>
+	    <input type="checkbox" name="attr_psychologie" value="1" /><label><span data-i18n="psychologie">Psychologie</span></label><br/>
+	    <input type="checkbox" name="attr_sciences" value="1" /><label><span data-i18n="sciences">Sciences</span></label><br/>
 	    <fieldset class="repeating_moves">
 	        <label class="sheet-movename"><span data-i18n="talent">Talent</span>:</label>
 	        <input type="text" name="attr_classmovename" />
