--- a/Inspectress-Inc/Inspectres.html
+++ b/Inspectress-Inc/Inspectres.html
@@ -1,5 +1,6 @@
 <div class="3colrow">
-    <img src="https://raw.githubusercontent.com/kinower/roll20-character-sheets/master/Aquelarre/images/Aquelarre_logo.png" class="sheet-logo" alt="Solicitus de trabajo"/>
+    <!--<img src="https://raw.githubusercontent.com/kinower/roll20-character-sheets/master/Aquelarre/images/Aquelarre_logo.png" class="sheet-logo"/>-->
+    <img src="https://raw.githubusercontent.com/MiguelZamoraRey/roll20-character-sheets/tree/new_sheet_inspectres_inc/Inspectress-Inc/images/cabecera.png" class="sheet-logo" alt="Solicitus de trabajo"/>
     <br/>
     <br/>
 </div>
