--- a/Hitos/hitos.html
+++ b/Hitos/hitos.html
@@ -15,7 +15,7 @@
                 <table>
                     <tbody>
                         <tr>
-                        <td><label data-i18n="nombre">Nombre</label> <input style="width: 195px; text-align: left;" name="attr_character_name" type="text" /></td>
+                        <td><label data-i18n="nombre" data-i18n="name">Nombre</label> <input style="width: 195px; text-align: left;" name="attr_character_name" type="text" /></td>
                         <td><label data-i18n="concepto">Concepto</label> <input style="width: 300px; text-align: left;" name="attr_Concepto" type="text" /></td>
                         <td ><label data-i18n="drama">Drama</label> <input class='sheet-skillvaluebox' style="width: 40px; text-align: left;" type="number" name="attr_Drama_ACTUAL" />/<input class='sheet-skillvaluebox' style="width: 40px; text-align: left;" type="number" name="attr_Drama" /></td></tr>
                     </tbody>
