--- a/Inspectress-Inc/Inspectres.html
+++ b/Inspectress-Inc/Inspectres.html
@@ -1,20 +1,20 @@
 <div class="3colrow">
-    <img src="https://raw.githubusercontent.com/MiguelZamoraRey/roll20-character-sheets/master/Inspectress-Inc/images/cabecera.png" class="sheet-logo"/>
+    <!--<img src="https://raw.githubusercontent.com/MiguelZamoraRey/roll20-character-sheets/master/Inspectress-Inc/images/cabecera.png" class="sheet-logo"/>-->
     <br/>
     <br/>
 </div>
 <div class="2colrow">
     <div class="col">
         <!--Datos personales-->
-        <label class="sheet-largue">Nombre Completo:</label><input type="text" name="attr_character_nombre" />
-        <label class="sheet-largue">Alias:</label><input type="text" name="attr_alias" />
-        <label class="sheet-largue">Transfondo:</label><input type="text" name="attr_transfondo" />
+        <label data-i18n="nombre" class="sheet-largue">Nombre Completo:</label><input type="text" name="attr_character_nombre" />
+        <label data-i18n="alias" class="sheet-largue">Alias:</label><input type="text" name="attr_alias" />
+        <label data-i18n="transfondo" class="sheet-largue">Transfondo:</label><input type="text" name="attr_transfondo" />
     </div>
     <div class="col">
         <!--Datos empresa-->
-        <label>Puesto:</label><input type="text" name="attr_puesto" />
-		<label>Descripción:</label><input type="text" name="attr__puesto_descripcion" />
-        <label>Talentos:</label><input type="text" name="attrtalentos" />
+        <label data-i18n="puesto">Puesto:</label><input type="text" name="attr_puesto" />
+		<label data-i18n="descripcion">Descripción:</label><input type="text" name="attr__puesto_descripcion" />
+        <label data-i18n="talentos">Talentos:</label><input type="text" name="attrtalentos" />
     </div>
 </div>
 <br/>
@@ -23,51 +23,51 @@
 <div class="2colrow">
     <div class="col">
         <!--Atrbutos y estrés-->
-        <label>CEREBRO </label><input type="number" name='attr_cerebro_actual' class='sheet-short' min="0" max="4">/<input type="number" name='attr_cerebro' class='sheet-short'>
-        <button type='roll' name='roll_testattack' value='&{template:default} {{name=@{character_nombre} tira cerebro!!}} {{result=[[1d6 * @{attr_cerebro_actual}]]}}'></button>
+        <label data-i18n="cerebro">CEREBRO </label><input type="number" name='attr_cerebro_actual' class='sheet-short' min="0" max="4">/<input type="number" name='attr_cerebro' class='sheet-short'>
+        <button type='roll' name='roll_atribute' value='/r {{@{cerebro_actual}d6}kh1,{?{Dados franquicia|0}d6}kh1}kh1'></button>
         <br />
-        <label>CUERPO </label><input type="number" name='attr_cuerpo_actual' class='sheet-short' min="0" max="4">/<input type="number" name='attr_cuerpo' class='sheet-short'>
-        <button type='roll' name='roll_testattack' value='&{template:default} {{name=@{character_nombre} tira cuerpo!!}} {{result=[[1d6 * @{attr_cuerpo_actual}]]}}'></button>
+        <label data-i18n="cuerpo">CUERPO </label><input type="number" name='attr_cuerpo_actual' class='sheet-short' min="0" max="4">/<input type="number" name='attr_cuerpo' class='sheet-short'>
+        <button type='roll' name='roll_testattack' value='/r {{@{cuerpo_actual}d6}kh1,{?{Dados franquicia|0}d6}kh1}kh1'></button>
         <br />
-        <label>TECNOLOGÍA </label><input type="number" name='attr_tecnologia_actual' class='sheet-short' min="0" max="4">/<input type="number" name='attr_tecnologia' class='sheet-short'>
-        <button type='roll' name='roll_testattack' value='&{template:default} {{name=@{character_nombre} tira tecnología!!}} {{result=[[1d6 * @{attr_tecnologia_actual}]]}}'></button>
+        <label data-i18n="tecnologia">TECNOLOGÍA </label><input type="number" name='attr_tecnologia_actual' class='sheet-short' min="0" max="4">/<input type="number" name='attr_tecnologia' class='sheet-short'>
+        <button type='roll' name='roll_testattack' value='/r {{@{tecnologia_actual}d6}kh1,{?{Dados franquicia|0}d6}kh1}kh1'></button>
         <br />
-        <label>LABIA </label><input type="number" name='attr_labia_actual' class='sheet-short' min="0" max="4">/<input type="number" name='attr_labia' class='sheet-short'>
-        <button type='roll' name='roll_testattack' value='&{template:default} {{name=@{character_nombre} tira labia!!}} {{result=[[1d6 * @{attr_labia_actual}]]}}'></button>
+        <label data-i18n="labia">LABIA </label><input type="number" name='attr_labia_actual' class='sheet-short' min="0" max="4">/<input type="number" name='attr_labia' class='sheet-short'>
+        <button type='roll' name='roll_testattack' value='/r {{@{labia_actual}d6}kh1,{?{Dados franquicia|0}d6}kh1}kh1'></button>
         <br />
         <hr/>
-        <span><strong>Agentes: </strong>Reparte 9 dados entre las cuatro habilidades de personaje. Van de 1 a 4.</span><br/>
-        <span><strong>Agentes preternaturales: </strong>Reparte 10 dados entre las cuatro habilidades de personaje. Van de 0 a 10. Coloque los dados que sobren sobre el apartado de Alarde</span>
+        <span data-i18n="explicacion_normal">Agentes normales - Reparte 9 dados entre las cuatro habilidades de personaje. Van de 1 a 4.</span><br/>
+        <span data-i18n="explicacion_preternatural">Agentes preternaturales - Reparte 10 dados entre las cuatro habilidades de personaje. Van de 0 a 10. Coloque los dados que sobren sobre el apartado de Alarde</span>
         <hr/>
-        <label class="sheet-largue">ESTRÉS ACTUAL </label><input type="number" name='attr_estres' class='sheet-short' min="0" max="5">
+        <label data-i18n="estres" class="sheet-largue">ESTRÉS ACTUAL </label><input type="number" name='attr_estres' class='sheet-short' min="0" max="5">
         <br />
-        <label class="sheet-largue">ALARDE ACTUAL </label><input type="number" name='attr_alarde' class='sheet-short' min="0" max="3">
+        <label data-i18n="alarde" class="sheet-largue">ALARDE ACTUAL </label><input type="number" name='attr_alarde' class='sheet-short' min="0" max="3">
         <br />
     </div>
     <div class="col">
     <!--Resumen tiradas-->
-        <label class="sheet-largue">Tabla de tirada de habilidad</p>
+        <label data-i18n="titulo-tabla" class="sheet-largue">Tabla de tirada de habilidad</label>
         <table class="sheet-table">
             <tr>
-                <th>Resultado</th><th>Descripcion</th>
+                <th><span data-i18n="resultado">Resultado</span></th><th><span data-i18n="descripcion2">Descripcion</span></th>
             </tr>
             <tr>
-                <td>6</td><td>¡Genial! Describe el resultado y gana 2 dados de franquicia.</td>
+                <td>6</td><td><span data-i18n="resultado6">¡Genial! Describe el resultado y gana 2 dados de franquicia.</span></td>
             </tr>
             <tr>
-                <td>5</td><td>Bueno. Describe el resultado y gana 1 dado de franquicia.</td>
+                <td>5</td><td><span data-i18n="resultado5">Bueno. Describe el resultado y gana 1 dado de franquicia.</span></td>
             </tr>
             <tr>
-                <td>4</td><td>Aceptable. Describe el resultado. Aunque es principalmente positivo,tienes que incluir un efecto negativo o humorístico.</td>
+                <td>4</td><td><span data-i18n="resultado4">Aceptable. Describe el resultado. Aunque es principalmente positivo,tienes que incluir un efecto negativo o humorístico.</span></td>
             </tr>
             <tr>
-                <td>3</td><td>Regular. El DJ decide tu destino, pero puede que te dé la oportunidad de sugerir un único efecto positivo (pero menor).</td>
+                <td>3</td><td><span data-i18n="resultado3">Regular. El DJ decide tu destino, pero puede que te dé la oportunidad de sugerir un único efecto positivo (pero menor).</span></td>
             </tr>
             <tr>
-                <td>2</td><td>Malo. El DJ decide tu destino, aunque puedes sugerirle algo negativo que sea apropiado.</td>
+                <td>2</td><td><span data-i18n="resultado2">Malo. El DJ decide tu destino, aunque puedes sugerirle algo negativo que sea apropiado.</span></td>
             </tr>
             <tr>
-                <td>1</td><td>Terrible. El DJ puede ensañarse contigo y ponerte en una situación realmente complicada resultado de tu incompetencia.</td>
+                <td>1</td><td><span data-i18n="resultado1">Terrible. El DJ puede ensañarse contigo y ponerte en una situación realmente complicada resultado de tu incompetencia.</span></td>
             </tr>
         </table>
     </div>
@@ -77,9 +77,20 @@
 <br/>
 <div class="3colrow">
 <!--características-->
-    <h2>Características</h2>
+    <h2 data-i18n="caracteristicas">Características</h2>
     <br />
     <fieldset class="repeating_caracteristicas">
-        <span class="sheet-largue">Nombre: </span><input type="text" name='attr_Caracteristicas-nombre' class='sheet-largue'/>
+        <input type="text" name='attr_Caracteristicas-nombre' class='sheet-largue'/>
     </fieldset>
 </div>
+
+<rolltemplate class="sheet-rolltemplate-atributes">
+    <table class="sheet-rolltemplate-table">
+        <caption>{{name}}</caption>
+        <tbody>
+            <tr>
+                <td>{{numdados}}</td>
+            </tr>
+        </tbody>
+    </table>
+</rolltemplate>
