Fixed a bug in the roll button for Luck and Morale.

--- a/Mongoose_Traveller2e_Advanced/MongooseTravellerAdv.html
+++ b/Mongoose_Traveller2e_Advanced/MongooseTravellerAdv.html
@@ -45,7 +45,7 @@
                     <td><input type="number" class="sheet-input sheet-mod" name="attr_mod-Endurance" value="0"/></td>
                     <td style="width:10px"><input type="hidden" name="attr_calc-Endurance" value="0"/></td>
 
-                    <td style="width:100px"><button class="sheet-button" name="roll_Luck" type="roll" value='&{template:skill-attrib} {{skill= Luck }} {{character= @{character_name} }} {{roll= [[(2d6 + @{mod-Luck}[END]+?{Modifier|0}[Mod])]] }} {{bb= [[(1d6)]] }}' ><div class="sheet-button_header" data-i18n="luck-u">Luck</div></button></td>
+                    <td style="width:100px"><button class="sheet-button" name="roll_Luck" type="roll" value='&{template:skill-attrib} {{skill= Luck }} {{character= @{character_name} }} {{roll= [[(2d6 + @{mod-Luck}[LUC]+?{Modifier|0}[Mod])]] }} {{bb= [[(1d6)]] }}' ><div class="sheet-button_header" data-i18n="luck-u">Luck</div></button></td>
                     <td><input type="number" class="sheet-input sheet-bold" name="attr_base-Luck" value="0"/></td>
                     <td><input type="number" class="sheet-input sheet-norm" name="attr_injury-Luck" value="0"/></td>
                     <td><input type="number" class="sheet-input sheet-mod" name="attr_mod-Luck" value="0"/></td>
@@ -70,7 +70,7 @@
                     <td><input type="number" class="sheet-input sheet-mod" name="attr_mod-Social" value="0"/></td>
                     <td style="width:10px"><input type="hidden" name="attr_calc-Social" value="0"/></td>
 
-                    <td style="width:100px"><button class="sheet-button" name="roll_Morale" type="roll" value='&{template:skill-attrib} {{skill= Morale }} {{character= @{character_name} }} {{roll= [[(2d6 + @{mod-Morale}[SOC]+?{Modifier|0}[Mod])]] }} {{bb= [[(1d6)]] }}' ><div class="sheet-button_header" data-i18n="morale-u">Morale</div></button></td>
+                    <td style="width:100px"><button class="sheet-button" name="roll_Morale" type="roll" value='&{template:skill-attrib} {{skill= Morale }} {{character= @{character_name} }} {{roll= [[(2d6 + @{mod-Morale}[MOR]+?{Modifier|0}[Mod])]] }} {{bb= [[(1d6)]] }}' ><div class="sheet-button_header" data-i18n="morale-u">Morale</div></button></td>
                     <td><input type="number" class="sheet-input sheet-bold" name="attr_base-Morale" value="0"/></td>
                     <td><input type="number" class="sheet-input sheet-norm" name="attr_injury-Morale" value="0"/></td>
                     <td><input type="number" class="sheet-input sheet-mod" name="attr_mod-Morale" value="0"/></td>
