--- a/Inspectress-Inc/Inspectres.html
+++ b/Inspectress-Inc/Inspectres.html
@@ -47,29 +47,29 @@
     <div class="col">
     <!--Resumen tiradas-->
         <label data-i18n="titulo-tabla" class="sheet-largue">Tabla de tirada de habilidad</label>
-        <table class="sheet-table">
-            <tr>
-                <th><span data-i18n="resultado">Resultado</span></th><th><span data-i18n="descripcion2">Descripcion</span></th>
-            </tr>
-            <tr>
-                <td>6</td><td><span data-i18n="resultado6">¡Genial! Describe el resultado y gana 2 dados de franquicia.</span></td>
-            </tr>
-            <tr>
-                <td>5</td><td><span data-i18n="resultado5">Bueno. Describe el resultado y gana 1 dado de franquicia.</span></td>
-            </tr>
-            <tr>
-                <td>4</td><td><span data-i18n="resultado4">Aceptable. Describe el resultado. Aunque es principalmente positivo,tienes que incluir un efecto negativo o humorístico.</span></td>
-            </tr>
-            <tr>
-                <td>3</td><td><span data-i18n="resultado3">Regular. El DJ decide tu destino, pero puede que te dé la oportunidad de sugerir un único efecto positivo (pero menor).</span></td>
-            </tr>
-            <tr>
-                <td>2</td><td><span data-i18n="resultado2">Malo. El DJ decide tu destino, aunque puedes sugerirle algo negativo que sea apropiado.</span></td>
-            </tr>
-            <tr>
-                <td>1</td><td><span data-i18n="resultado1">Terrible. El DJ puede ensañarse contigo y ponerte en una situación realmente complicada resultado de tu incompetencia.</span></td>
-            </tr>
-        </table>
+        <div class="sheet-table">
+            <div class="2colrow sheet-row-titles">
+                <div class="col sheet-short-col"><span data-i18n="resultado">Resultado</span></div><div class="col"><span data-i18n="descripcion2">Descripcion</span></div>
+            </div>
+            <div class="2colrow sheet-color-gray">
+                <div class="col sheet-short-col">6</div><div class="col"><span data-i18n="resultado6">¡Genial! Describe el resultado y gana 2 dados de franquicia.</span></div>
+            </div>
+            <div class="2colrow">
+                <div class="col sheet-short-col">5</div><div class="col"><span data-i18n="resultado5">Bueno. Describe el resultado y gana 1 dado de franquicia.</span></div>
+            </div>
+            <div class="2colrow sheet-color-gray">
+                <div class="col sheet-short-col">4</div><div class="col"><span data-i18n="resultado4">Aceptable. Describe el resultado. Aunque es principalmente positivo,tienes que incluir un efecto negativo o humorístico.</span></div>
+            </div>
+            <div class="2colrow">
+                <div class="col sheet-short-col">3</div><div class="col"><span data-i18n="resultado3">Regular. El DJ decide tu destino, pero puede que te dé la oportunidad de sugerir un único efecto positivo (pero menor).</span></div>
+            </div>
+            <div class="2colrow sheet-color-gray">
+                <div class="col sheet-short-col">2</div><div class="col"><span data-i18n="resultado2">Malo. El DJ decide tu destino, aunque puedes sugerirle algo negativo que sea apropiado.</span></div>
+            </div>
+            <div class="2colrow">
+                <div class="col sheet-short-col">1</div><div class="col"><span data-i18n="resultado1">Terrible. El DJ puede ensañarse contigo y ponerte en una situación realmente complicada resultado de tu incompetencia.</span></div>
+            </div>
+        </div>
     </div>
 </div>
 <br/>
@@ -89,7 +89,7 @@
         <caption>{{name}}</caption>
         <tbody>
             <tr>
-                <td>{{numdados}}</td>
+                <div>{{numdados}}</div>
             </tr>
         </tbody>
     </table>
