--- a/Krystal (FR)/Krystal character sheet v1.html
+++ b/Krystal (FR)/Krystal character sheet v1.html
@@ -707,7 +707,7 @@
                 <td>
                     <input type="number" name="attr_fouilcarac" readonly >
                         <script type="text/worker">
-                            on('ready change:dext change:sage', function() {
+                            on('ready change:intel change:sage', function() {
                                 getAttrs(['intel', 'sage'], function(values) {
                                 var intel = parseInt(values.intel) || 0,
                                     sage = parseInt(values.sage) || 0;
@@ -739,7 +739,7 @@
                 <td>
                     <input type="number" name="attr_ideecarac" readonly >
                         <script type="text/worker">
-                            on('ready change:dext change:sage', function() {
+                            on('ready change:intel change:sage', function() {
                                 getAttrs(['intel', 'sage'], function(values) {
                                 var intel = parseInt(values.intel) || 0,
                                     sage = parseInt(values.sage) || 0;
@@ -1001,7 +1001,7 @@
                 <td>
                     <input type="number" name="attr_lirecarac" readonly >
                         <script type="text/worker">
-                            on('ready change:dext change:sage', function() {
+                            on('ready change:intel change:sage', function() {
                                 getAttrs(['intel', 'sage'], function(values) {
                                 var intel = parseInt(values.intel) || 0,
                                     sage = parseInt(values.sage) || 0;
@@ -1097,7 +1097,7 @@
                 <td>
                     <input type="number" name="attr_perccarac" readonly >
                         <script type="text/worker">
-                            on('ready change:dext change:sage', function() {
+                            on('ready change:intel change:sage', function() {
                                 getAttrs(['intel', 'sage'], function(values) {
                                 var intel = parseInt(values.intel) || 0,
                                     sage = parseInt(values.sage) || 0;
@@ -1228,7 +1228,7 @@
                 <td>
                     <input type="number" name="attr_psychcarac" readonly >
                         <script type="text/worker">
-                            on('ready change:dext change:sage', function() {
+                            on('ready change:intel change:sage', function() {
                                 getAttrs(['intel', 'sage'], function(values) {
                                 var intel = parseInt(values.intel) || 0,
                                     sage = parseInt(values.sage) || 0;
@@ -1551,7 +1551,7 @@
                 <td>
                     <input type="number" name="attr_volocarac" readonly >
                         <script type="text/worker">
-                            on('ready change:dext change:sage', function() {
+                            on('ready change:intel change:sage', function() {
                                 getAttrs(['intel', 'sage'], function(values) {
                                 var intel = parseInt(values.intel) || 0,
                                     sage = parseInt(values.sage) || 0;
