relative links for images

--- a/Pendragon-french/Pendragon-french.html
+++ b/Pendragon-french/Pendragon-french.html
@@ -9,10 +9,9 @@
         title="Domaine"></span>
 <div class="sheet-tab-content sheet-tab1">
     <div class="sheet-header">
-
         <div class="sheet-inline-block sheet-logo">
-            <img class="sheet-logo" src="https://i.imgur.com/7PIdcSW.jpg"/>
-            <!--                <img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Pendragon-french/Images/logo-pendragon-52-300.jpg" style="max-height: 100px;"/>-->
+            <!--            image online url : https://i.imgur.com/7PIdcSW.jpg -->
+            <img class="sheet-logo" src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Pendragon-french/Images/logo-pendragon-52-300.jpg"/>
         </div>
         <div class="sheet-inline-block sheet-header-right">
             <div class="sheet-header-line">
@@ -29,7 +28,6 @@
         </div>
     </div>
     <div class="sheet-3colrow">
-
         <div class="sheet-col1">
             <p>
                 <label class='sheet-t1c1'>Nom</label><input class="sheet-big sheet-inline sheet-t1c1" type="text"
@@ -243,9 +241,10 @@
             </p>
             <h3 class="sheet-h3-black">Caractéristiques secondaires</h3>
             <!--            <input type="hidden" name="attr_DEG-dice" value="((@{FOR} + @{TAI}) / 6)" disabled="true"/>-->
-            <label style='display:inline-block;  width:120px;'>DEGATS</label>
-            <input type="text" name="attr_DEG" class="sheet-carac3"
-                   value="(round((@{FOR}+@{TAI})/6)+@{BR-d6dom}*@{flag-bonus})" disabled="true"/>
+            <label style='display:inline-block;  width:120px;'>DEGATS</label><input type="text" name="attr_DEG"
+                                                                                    class="sheet-carac3"
+                                                                                    value="(round((@{FOR}+@{TAI})/6)+@{BR-d6dom}*@{flag-bonus})"
+                                                                                    disabled="true"/>
             <button class='sheet-dice-button' type='roll' name='roll_TestDegats'
                     value='&{template:pendragon-degats} {{perso=@{MONNOM}}} {{nbdes= [[@{DEG}]] }} {{bonus= [[@{BR-degats}*@{flag-bonus}]]}} {{roll= [[[[@{DEG}]]d6+[[@{BR-degats}*@{flag-bonus}]]]]}}'></button>
 
@@ -254,13 +253,12 @@
                     value='&{template:pendragon-degats} {{perso=@{MONNOM}}} {{critique= oui}}{{nbdes= [[@{DEG}*2]] }} {{bonus= [[@{BR-degats}*@{flag-bonus}]]}} {{roll= [[[[@{DEG}*2]]d6+[[@{BR-degats}*@{flag-bonus}]]]]}}'></button>
 
             <br/>
-            <label style='display:inline-block;  width:120px;'>MOUVEMENT</label><input style='display:inline;'
-                                                                                       type="text" name="attr_MOV"
-                                                                                       class="sheet-carac3"
-                                                                                       value="round((@{FOR}+@{DEX})/10)+@{BR-mvt}*@{flag-bonus}"
-                                                                                       disabled="true"/><br/>
-            <label style='display:inline-block;  width:120px;'>GUERISON</label><input style='display:inline;'
-                                                                                      type="text" name="attr_GUE"
+            <label style='display:inline-block;  width:120px;'>MOUVEMENT</label><input
+                type="text" name="attr_MOV"
+                class="sheet-carac3"
+                value="round((@{FOR}+@{DEX})/10)+@{BR-mvt}*@{flag-bonus}"
+                disabled="true"/><br/>
+            <label style='display:inline-block;  width:120px;'>GUERISON</label><input type="text" name="attr_GUE"
                                                                                       class="sheet-carac3"
                                                                                       value="(round((@{CON}+@{FOR})/10)+@{BR-recup}*@{flag-bonus})"
                                                                                       disabled="true"/><br/>
@@ -631,15 +629,13 @@
                     value='&{template:pendragon} {{perso=@{MONNOM}}} {{carac_type= trait dirigé}} {{carac_name= @{tdbase} envers @{tdcible} }}{{carac_value=[[@{tdtrait}]]}} {{modif_context=[[floor(?{modif|0})+@{tdvalue}]]}} {{carac_modifiee= [[@{tdvalue}+@{tdtrait}+floor(?{modif|0})]]}} {{bonus_expert= [[{{@{tdvalue}+@{tdtrait}+floor(?{modif|0}),0}>21}*(@{tdvalue}+@{tdtrait}+floor(?{modif|0})-20)]]}} {{seuil= [[{{floor(?{modif|0})+@{tdvalue}+@{tdtrait},0}>21}*(20-{{floor(?{modif|0})+@{tdvalue}+@{tdtrait},0}>21}*(@{tdvalue}++@{tdtrait}+floor(?{modif|0})-20))+{{@{tdvalue}+@{tdtrait}+floor(?{modif|0}),30}<20}*(@{tdvalue}+@{tdtrait}+floor(?{modif|0})))]]}}{{roll= [[1d20cs[[({@{tdvalue}+@{tdtrait}+floor(?{modif|0}),0}>1)*(@{tdvalue}+@{tdtrait}+floor(?{modif|0}))]]cs>[[(40-(1*@{tdvalue})-1*(@{tdtrait})-1*floor(?{modif|0})+100*(1-{{@{tdvalue}+@{tdtrait}+floor(?{modif|0}),0}>21})-1)*(1-({{@{tdvalue}+@{tdtrait}+floor(?{modif|0}),0}>39}))+1]]cf[[20+100*{{@{tdvalue}+@{tdtrait}+floor(?{modif|0}),0}>20}]]+[[{{[[@{tdvalue}+@{tdtrait}+floor(?{modif|0})]],0}>21}*([[@{tdvalue}+@{tdtrait}+floor(?{modif|0})]]-20)]]]]}}'></button>
         </fieldset>
     </div>
-
-
 </div>
 <!-- 3e partie, compétences  -->
 <div class="sheet-tab-content sheet-tab3">
     <div class="sheet-2colrow">
         <div class="sheet-col">
 
-            <h2 >Compétences</h2>
+            <h2>Compétences</h2>
 
             <label style='display:inline-block;  width:140px;'>canotage</label>
             <input style='display:inline;' type="number" name="attr_canot" value="0"/>
@@ -980,8 +976,6 @@
                                                                         name="attr_HPROT" value="0"/>
                     </div>
                 </div>
-
-
             </div>
             <div>
                 <h4 style="margin: 10px;">Autres montures</h4>
@@ -1166,7 +1160,6 @@
 </div>
 
 <div class="sheet-tab-content sheet-tab5">
-
     <label>Nom du domaine</label><input
         class="sheet-nomdom" type="text" name="attr_Dnom" class="sheet-long"/>
     <div class="sheet-inline-block">
@@ -1291,7 +1284,6 @@
             </td>
         </table>
     </fieldset>
-
 </div>
 
 <rolltemplate class="sheet-rolltemplate-pendragon">
@@ -1354,7 +1346,6 @@
 
     </table>
 </rolltemplate>
-
 
 <script type="text/worker">
 
@@ -1636,10 +1627,6 @@
 
               return tabCaracs;
     }
-
-
-
-
 
 
 </script>
