Added new Salvo Mode images

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -49,34 +49,13 @@
 
 		<div class="salvo">
 			<div class="salvoTitle">Salvo</div>
-			<div class="taskDice">
-				<div class="taskTitle">Task Dice</div>
-				<!--Skill Selector-->
-				<div>Skill</div>
-				<select name="attr_salvoSkill" class="">
-					<option value="0"></option>
-					<optgroup label="Communications">
-						<option value="1">Culture</option>
-						<option value="2">Economy</option>
-						<option value="3">Interface</option>
-						<option value="4">Politic</option>
-						<option value="5">Sophontolgy</option>
-					</optgroup>
-					<optgroup label="Operations">
-						<option value="6">Athletics</option>
-						<option value="7">Fitness</option>
-						<option value="8">Geosciences</option>
-						<option value="9">Perception</option>
-						<option value="10">Pilot</option>
-					</optgroup>
-					<optgroup label="Engineering">
-						<option value="11">Biosciences</option>
-						<option value="12">Field Dynamics</option>
-						<option value="13">Pulse Projection</option>
-						<option value="14">Inscription</option>
-						<option value="15">Mechatronics</option>
-					</optgroup>
-				</select>
+			<div class="skillChoice"></div>
+				<!--Skill Input-->
+				<div class="skillDirection">Choose a skill</div>
+				<input type="number" class="salvoSkillRating" name="attr_salvoSkillRating" />
+				<input type="text" class="salvoSkill" name="attr_salvoSkill" />
+
+
 				<!--Hidden Skill Selection Radio switch-->
 				<input type="radio" name="attr_salvoSkill" class="hidden" value="0" checked="checked">
 				<input type="radio" name="attr_salvoSkill" class="hidden cultureSelector" value="1">
@@ -137,7 +116,7 @@
 					</optgroup>
 				</select>
 				<div>Advantage</div>
-			</div>
+
 			<div class="threatDice">
 				<div class="threatTitle">Threat Dice</div>
 				<div>Difficulty</div>
