Updated styles for Salvo Mode

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -52,8 +52,11 @@
 			<div class="skillChoice"></div>
 				<!--Skill Input-->
 				<div class="skillDirection">Choose a skill</div>
-				<input type="number" class="salvoSkillRating" name="attr_salvoSkillRating" />
-				<input type="text" class="salvoSkill" name="attr_salvoSkill" />
+				<div class="salvoSkillRatingBox inputBox">
+					<input type="number" class="salvoSkillRating" name="attr_salvoSkillRating" />
+					<input type="text" class="salvoSkill" name="attr_salvoSkill" />
+				</div>
+
 
 
 				<!--Hidden Skill Selection Radio switch-->
